# HydraNew

hydra/hydra_dsg_builder/: CMakeLists.txt  package.xml
hydra/hydra_dsg_builder/include/hydra_dsg_builder/: incremental_mesh_segmenter.h  incremental_types.h
hydra/hydra_dsg_builder/launch/: uhumans2_incremental_dsg.launch
hydra/hydra_dsg_builder/src/: incremental_dsg_backend.cpp  incremental_dsg_frontend.cpp  incremental_mesh_segmenter.cpp
hydra/hydra_utils/src/: dsg_streaming_interface.cpp  dynamic_scene_graph_visualizer.cpp  pose_graph_publisher_node.cpp
kimera_pgmo/include/kimera_pgmo/: MeshFrontend.h
kimera_pgmo/src/: KimeraPgmoInterface.cpp  MeshFrontend.cpp
kimera_semantics/kimera_semantics_ros/cfg/: tesse_multiscene_office1_segmentation_mapping.csv
mesh_tools/rviz_map_plugin/src/: TexturedMeshVisual.cpp
mesh_tools/rviz_mesh_plugin/src/: textured_mesh_visual.cpp  trianglemesh_visual.cpp
spark_dsg/include/spark_dsg/: dynamic_scene_graph.h
